<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_game_title"
        style="@style/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_player_turn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_player_turn"
        style="@style/player_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_turn"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_game_title" />

    <ImageButton
        android:id="@+id/imgbtn_top_left"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/top_left"
        android:tag="0"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_left"
        app:layout_constraintEnd_toStartOf="@+id/imgbtn_top"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtn_top"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/top"
        android:tag="1"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_center"
        app:layout_constraintEnd_toStartOf="@+id/imgbtn_top_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgbtn_top_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtn_top_right"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/top_right"
        android:tag="2"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgbtn_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtn_left"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/left"
        android:tag="3"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_bottom_left"
        app:layout_constraintEnd_toStartOf="@+id/imgbtn_center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_top_left"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtn_center"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/center"
        android:tag="4"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_bottom"
        app:layout_constraintEnd_toStartOf="@+id/imgbtn_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgbtn_left"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_top"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtn_right"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/right"
        android:tag="5"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_bottom_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgbtn_center"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_top_right"
        tools:ignore="ImageContrastCheck" />


    <ImageButton
        android:id="@+id/imgbtn_bottom_left"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_left"
        android:tag="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgbtn_bottom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_left"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtn_bottom"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom"
        android:tag="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgbtn_bottom_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgbtn_bottom_left"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_center"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtn_bottom_right"
        style="@style/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_right"
        android:tag="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgbtn_bottom"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_right"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>